# EtcLib

./: CMakeLists.txt  README.md
.github/workflows/: build-project.yml  check-release-pr.yml  generate-release.yml  tag-release-commit-and-sync-dev.yml
lib/: CMakeLists.txt
lib/include/Etc/: Etc.h  EtcColorFloatRGBA.h  EtcImage.h
lib/include/etc/: EtcColorFloatRGBA.h  EtcImage.h
lib/src/: Etc.cpp  EtcImage.cpp  Output.h
lib/src/Codec/: EtcBlock4x4.cpp  EtcBlock4x4.h  EtcBlock4x4Encoding.cpp  EtcBlock4x4Encoding.h  EtcBlock4x4Encoding_ETC1.cpp  EtcBlock4x4Encoding_ETC1.h  EtcBlock4x4Encoding_R11.cpp  EtcBlock4x4Encoding_R11.h  EtcBlock4x4Encoding_RG11.cpp  EtcBlock4x4Encoding_RG11.h  EtcBlock4x4Encoding_RGB8.cpp  EtcBlock4x4Encoding_RGB8A1.cpp  EtcBlock4x4Encoding_RGB8A1.h  EtcBlock4x4Encoding_RGBA8.cpp  EtcDifferentialTrys.cpp  EtcDifferentialTrys.h  EtcIndividualTrys.cpp  EtcIndividualTrys.h  EtcMath.cpp
